# chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  chess.h  main.cpp
classes/logger/: CMakeLists.txt  logger.cpp  logger.h
classes/model/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h
classes/notation/: CMakeLists.txt  converter.cpp  converter.h  fenconverter.cpp  fenconverter.h
classes/view/: CMakeLists.txt  board_view.cpp  board_view.h  game_view.cpp  game_view.h
